Fixed group chat height, now aligns with song queue

--- a/src/css/components/Chat.css
+++ b/src/css/components/Chat.css
@@ -3,6 +3,7 @@
 	border-color: b3b3b3;
 	border-style: solid;
 	border-width: 1px;
+	margin-top: -90px;	
 }
 
 .chat-box {
